@@ -24,8 +24,21 @@ class ImageServerStorage(CouchDBStorage):
     def _put_file(self, name, content):
         return huimages.save_image(content, filename=name, typ='product_image')
     
-    def get_document(self, name):
-        raise NotImplementedError
+    def exists(self, name):
+        try:
+            huimages.get_size(name)
+            return True
+        except:
+            return False
+    
+    def size(self, name):
+        return huimages.get_size(name)
+    
+    def url(self, name):
+        return huimages.imageurl(name)
     
     def delete(self, name):
-        raise IOError("ImageServerStorage is not intended to support delete()")
+        # OR: ignore silently?
+        raise NotImplementedError("ImageServerStorage is not intended to support delete()")
+    
+    # Storage.listdir()
