@@ -26,7 +26,7 @@ hubarcode = setup(name='huDjango',
       maintainer='Maximillian Dornseif',
       maintainer_email='md@hudora.de',
       url='https://cybernetics.hudora.biz/projects/wiki/huDjango',
-      version='0.82',
+      version='0.82p1',
       description='various snippets for use with Django',
       long_description=long_description,
       classifiers=['License :: OSI Approved :: BSD License',
@@ -34,7 +34,7 @@ hubarcode = setup(name='huDjango',
                    'Programming Language :: Python'],
       zip_safe=True,
       packages=find_packages(),
-      install_requires=['Django>=1.0.2', 'huimages'],
+      install_requires=['Django>=1.0.2', 'huimages>=1.01'],
       dependency_links = ['http://cybernetics.hudora.biz/dist/',
                           'http://cybernetics.hudora.biz/nonpublic/eggs/'],
 )
